--- a/kadai_tutorial_output/product.html
+++ b/kadai_tutorial_output/product.html
@@ -23,10 +23,10 @@
       <a href="index.html#contact">CONTACT</a>
     </nav>
     <!--スマホ用メニューボタン-->
-    <img id="menu-sp" src="images/button-menu.png" alt="ナビゲーションを開く" onclick="docment.getElementByID('nav-sp').style.display='block'">
+    <img id="menu-sp" src="images/button-menu.png" alt="ナビゲーションを開く" onclick="document.getElementById('nav-sp').style.display = 'block'">
     <!--スマホ用ナビ-->
     <nav id="nav-sp">
-      <img id="close" src="images/button-close.png" alt="ナビゲーションを閉じる" onclick="document.getElementByID('nav-sp').style.display='none'">
+      <img id="close" src="images/button-close.png" alt="ナビゲーションを閉じる" onclick="document.getElementById('nav-sp').style.display='none'">
       <a id="logo-sp" href="index.html"onclick="document.getElementById('nav-sp').style.display = 'none'"><img src="images/logo-sp.png" alt="トップページに戻る"></a>
       <a class="menu" href="mission.html" onclick="docment.getElementByID('nav-sp').style.display='none'">MISSION</a>
       <a class="menu" href="product.html" onclick="docment.getElementByID('nav-sp').style.display='none'">PRODUCT</a>
